--- a/poster.tex
+++ b/poster.tex
@@ -36,7 +36,8 @@
 
 \title{Some fancy title: followed by some more text}
 
-\author{Alyssa P. Hacker \inst{1} \and Ben Bitdiddle \inst{2} \and Lem E. Tweakit \inst{2}}
+\author{Alyssa P. Hacker \inst{1} \url{name@inst1.edu} \\
+Ben Bitdiddle \inst{2} \and Lem E. Tweakit \inst{2}}
 
 \institute[shortinst]{\inst{1} Some Institute \samelineand \inst{2} Another Institute}
 
